Pint Changelog
==============

0.20 (unreleased)
------------------

- Reorganized code into facets.
  Each facet encapsulate a Pint functionality.
  (See #1466, #1479)
- Parse both Greek mu and micro Unicode points without error.
  (Issue #1030, #574)
- Added angular frequency documentation page.
- Move ASV benchmarks to dedicated folder. (Issue #1542)
- Fix a recursion error that would be raised when passing quantities to `cond` and `x`.
  (Issue #1510, #1530)
- Update test_non_int tests for pytest.
- Better support for uncertainties (See #1611, #1614)

0.19.2 (2022-04-23)
-------------------

- Add the ``separate_format_defaults`` registry setting (Issue #1501, PR #1503)
- Handle definitions @import from relative paths on Windows
  (Issue #1508, thanks khaeru)


0.19.1 (2022-04-06)
-------------------

- Provide a method to iter the definitions in the order they appear,
  recursing the imported files. (Issue #1498)


0.19 (2022-04-04)
-----------------

- Better separation between parsing and loading of definitions.
  Implement a parsed "binary" version of "textual" definition files.
  Infrastructure to disk cache parsed definition files and RegistryCache
  resulting in a 10X speed up in registry instantiation when enabled.
  (Issue #1465)
- Deprecate the old format defaulting behavior and prepare for the new one (Issue #1407)
- Fix a bug for offset units of higher dimension, e.g. gauge pressure.
  (Issue #1066, thanks dalito)
- Fix type hints of function wrapper (Issue #1431)
- Upgrade min version of uncertainties to 3.1.4
- Add a example for `register_unit_format` to the formatting docs (Issue #1422).
- Fix setting options of the application registry (Issue #1403).
- Fix Quantity & Unit `is_compatible_with` with registry active contexts (Issue #1424).
- Allow Quantity to parse 'NaN' and 'inf(inity)', case insensitive
- Fix casting error when using to_reduced_units with array of int.
  (Issue #1184)