@@ -153,6 +153,12 @@ class PlainQuantity(PrettyIPython, SharedRegistryObject, Generic[_MagnitudeType]
     _magnitude: _MagnitudeType
 
     @property
+    def ndim(self) -> int:
+        if isinstance(self.magnitude, numbers.Number):
+            return 0
+        return self.magnitude.ndim
+
+    @property
     def force_ndarray(self) -> bool:
         return self._REGISTRY.force_ndarray
 
